@@ -1,6 +1,7 @@
 ver 0.19 (not yet released)
 * protocol
-  - new commands "addtagid", "cleartagid", "listfiles", "rangeid"
+  - new commands "addtagid", "cleartagid", "listfiles", "listmounts",
+    "listneighbors", "mount", "rangeid", "unmount"
   - "lsinfo" and "readcomments" allowed for remote files
   - "listneighbors" lists file servers on the local network
   - "playlistadd" supports file:///
